# viridian-cli

./: COMMANDS.md  LICENSE  MANIFEST.in  README.md  install-dist.sh  pyproject.toml  requirements.txt  upload-dist.sh
src/: main.py
src/fixity/: cli.py
src/fixity/resources/: __init__.py  docker-compose-dev.yml  docker-compose-fixity.yml  master.env.template
src/fixity/resources/db/oracle/: init_oracle.sh  schema-oracle.sql  set-data-oracle.sh  set-data-oracle.sql
src/fixity/resources/db/postgres/: create-postgres.sql  schema-drop.sql  schema-grants-postgres.sql  schema-postgres.sql  set-up-postgresql.sh  set-up-remote-postgresql.sh
src/pyaz/: blob_upload.py  cli.py  configure.py  db_access_rosetta.py
src/shared/: config.py  environment.py  exiting.py  gil_debugging.py  time_utils.py
