[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixity-cli"
version = "2.0.0"
description = "Viridian CLI for simulator and fixity container workflows"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.9"

authors = [
    { name = "Frank Lee", email = "frank.lee@dia.govt.nz" },
]

dependencies = [
    "orjson~=3.11.5",
    "requests~=2.32.5",
    "psutil~=7.1.3",
    "plotext~=5.3.2",
    "rich~=14.2.0",
    "requests-unixsocket~=0.4.1",
    "aiohttp~=3.13.2",
    "docker~=7.1.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fixity" = [
    "resources/*.yml",
    "resources/*.template",
    "resources/db/oracle/*",
    "resources/db/postgres/*",
]

[project.scripts]
fixity = "fixity.cli:main"
simulator = "fixity.cli:main_simulator"
